GNOME Bugzilla – Bug 761915
The user panel doesn't use gstreamer directly so shouldn't depends on it
Last modified: 2016-03-02 10:56:39 UTC
The panel uses cheese which is using gstreamer, there is no need of a direct depends on that one
Created attachment 320953 [details] [review] user-accounts: don't depends on gstreamer
Committed after fixing up the commit message