user-accounts: Don't link directly to GStreamer

The panel uses cheese and not GStreamer directly

https://bugzilla.gnome.org/show_bug.cgi?id=761915